# x11-emitter

./: .gitignore  CMakeLists.txt  README.md  XWatch.cpp  XWatcher.cpp  binding.gyp  index.js  main.cpp  package.json
xutils/: XWatchDaemon.cpp  XWatchDaemon.h  XWatcherDaemon.cpp  XWatcherDaemon.h
